--- a/app/src/main/res/layout/activity_new_driver_nav.xml
+++ b/app/src/main/res/layout/activity_new_driver_nav.xml
@@ -5,6 +5,7 @@
     android:id="@+id/nav_dra"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".panels.driver.dashboard.DriverMainActivity">
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -38,7 +39,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:navigationIcon="@drawable/menu"
-                    android:layout_marginTop="@dimen/_20sdp"
+                    android:layout_marginTop="@dimen/_22sdp"
                     app:popupTheme="@style/AppTheme.PopupOverlay">
                     <ImageView
                         android:id="@+id/img_seekbar"
