--- a/app/src/main/res/layout/activity_profile_creation_driver.xml
+++ b/app/src/main/res/layout/activity_profile_creation_driver.xml
@@ -127,7 +127,7 @@
                                 android:background="@null"
                                 android:fontFamily="@font/avenir_black"
                                 android:imeOptions="actionNext"
-                                android:inputType="textPersonName"
+                                android:inputType="textCapSentences"
                                 android:paddingBottom="5dp"
                                 android:singleLine="true"
                                 android:textColor="@color/black"
@@ -296,7 +296,6 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:button="@drawable/radio_selector"
-                            android:checked="true"
                             android:fontFamily="@font/avenir_black"
                             android:paddingLeft="10dp"
                             android:text="Male" />
@@ -344,7 +343,6 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:button="@drawable/radio_selector"
-                            android:checked="true"
                             android:fontFamily="@font/avenir_black"
                             android:paddingLeft="10dp"
                             android:text="Smoker" />
@@ -813,7 +811,7 @@
                                 android:background="@null"
                                 android:fontFamily="@font/avenir_black"
                                 android:imeOptions="actionNext"
-                                android:inputType="text"
+                                android:inputType="textCapSentences"
                                 android:paddingBottom="5dp"
                                 android:singleLine="true"
                                 android:textColor="@color/black"
@@ -869,7 +867,7 @@
                                 android:background="@null"
                                 android:fontFamily="@font/avenir_black"
                                 android:imeOptions="actionNext"
-                                android:inputType="text"
+                                android:inputType="textCapSentences"
                                 android:paddingBottom="5dp"
                                 android:singleLine="true"
                                 android:textColor="@color/black"
@@ -926,7 +924,7 @@
                                 android:background="@null"
                                 android:fontFamily="@font/avenir_black"
                                 android:imeOptions="actionNext"
-                                android:inputType="text"
+                                android:inputType="textCapCharacters"
                                 android:paddingBottom="5dp"
                                 android:singleLine="true"
                                 android:textColor="@color/black"
@@ -1021,7 +1019,7 @@
                                     android:background="@null"
                                     android:fontFamily="@font/avenir_black"
                                     android:imeOptions="actionNext"
-                                    android:inputType="text"
+                                    android:inputType="textCapSentences"
                                     android:paddingBottom="5dp"
                                     android:singleLine="true"
                                     android:textColor="@color/black"
@@ -1077,7 +1075,7 @@
                                     android:background="@null"
                                     android:fontFamily="@font/avenir_black"
                                     android:imeOptions="actionNext"
-                                    android:inputType="text"
+                                    android:inputType="textCapSentences"
                                     android:paddingBottom="5dp"
                                     android:singleLine="true"
                                     android:textColor="@color/black"
@@ -1133,7 +1131,7 @@
                                     android:background="@null"
                                     android:fontFamily="@font/avenir_black"
                                     android:imeOptions="actionNext"
-                                    android:inputType="text"
+                                    android:inputType="textCapSentences"
                                     android:paddingBottom="5dp"
                                     android:singleLine="true"
                                     android:textColor="@color/black"
@@ -1189,7 +1187,7 @@
                                     android:background="@null"
                                     android:fontFamily="@font/avenir_black"
                                     android:imeOptions="actionNext"
-                                    android:inputType="text"
+                                    android:inputType="textCapSentences"
                                     android:paddingBottom="5dp"
                                     android:singleLine="true"
                                     android:textColor="@color/black"
@@ -1245,7 +1243,7 @@
                                     android:background="@null"
                                     android:fontFamily="@font/avenir_black"
                                     android:imeOptions="actionNext"
-                                    android:inputType="text"
+                                    android:inputType="textCapSentences"
                                     android:paddingBottom="5dp"
                                     android:singleLine="true"
                                     android:textColor="@color/black"
@@ -1300,7 +1298,7 @@
                                     android:background="@null"
                                     android:fontFamily="@font/avenir_black"
                                     android:imeOptions="actionNext"
-                                    android:inputType="text"
+                                    android:inputType="textCapCharacters"
                                     android:paddingBottom="5dp"
                                     android:singleLine="true"
                                     android:textColor="@color/black"
@@ -1561,7 +1559,7 @@
                                 android:background="@null"
                                 android:fontFamily="@font/avenir_black"
                                 android:imeOptions="actionDone"
-                                android:inputType="text"
+                                android:inputType="textCapCharacters"
                                 android:paddingBottom="5dp"
                                 android:singleLine="true"
                                 android:textColor="@color/black"
@@ -1638,6 +1636,7 @@
                             android:textColor="@android:color/white" />
                     </LinearLayout>
                 </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
