--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -94,6 +94,7 @@
                             android:fontFamily="@font/avenir_black"
                             android:textColor="@color/black"
                             android:background="@null"
+                            android:imeOptions="actionNext"
                             android:translationY="5dp"
                             android:paddingBottom="5dp"
                             android:inputType="textPassword|textNoSuggestions"
@@ -148,6 +149,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/avenir_black"
                             android:textColor="@color/black"
+                            android:imeOptions="actionDone"
                             android:background="@null"
                             android:translationY="5dp"
                             android:paddingBottom="5dp"
