--- a/app/src/main/res/layout/activity_new_passenger_nav.xml
+++ b/app/src/main/res/layout/activity_new_passenger_nav.xml
@@ -5,6 +5,7 @@
     android:id="@+id/nav_dra"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".panels.passenger.dashboard.PassengerMainActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -40,7 +41,7 @@
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    android:layout_marginTop="@dimen/_20sdp"
+                    android:layout_marginTop="@dimen/_22sdp"
                     app:popupTheme="@style/AppTheme.PopupOverlay" />
             </com.google.android.material.appbar.AppBarLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
