--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -36,8 +36,8 @@
                 android:id="@+id/tvUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Username"
                 android:fontFamily="@font/avenir_black"
-                android:text="Demo User"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/_15ssp" />
 
