--- a/app/src/main/res/layout/fragment_otp_verification.xml
+++ b/app/src/main/res/layout/fragment_otp_verification.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -41,6 +43,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/tvTextDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -58,7 +61,7 @@
 
                 <com.goodiebag.pinview.Pinview
                     android:id="@+id/pinview"
-                    app:cursorVisible="false"
+                    app:cursorVisible="true"
                     app:forceKeyboard="false"
                     app:hint=""
                     app:inputType="number"
